2003/06/26 01:11 pcg

        * META.yml: Add module meta-data in YAML for CPAN.

2003/06/24 23:16 muppetman

	* GParamSpec.xs, Glib.xs, Makefile.PL, gperl.h, typemap: new support
	for creating GParamSpecs.

	* GObject.xs: new was broken by removal of first class, fixed;
	moved newSVGParamSpec to GParamSpec.xs; removed unused variables for
	cleaner compiles.  altered debugging prints, which are on for this
	revision (see #define NOISY near the top)

	* GType.xs: can now add properties to perl-derived types.

	* Glib.pm: Glib::Object::Base supplies some default methods.
	bumped $VERSION to 0.25 for CVS series.

2003/06/23 sometime pcg

        * GObject.xs: big change in how perl wrappers are implemented. the
        new implementation will only ever create one perl wrapper (a real
        hash) for any gobject. The combined perl+gobject will stay alive
        as long as one of the partners is alive. The only real changes are
        in gperl_new_object and in the DESTROY method.
        * gperl.h: fix some of the documentation to reflect the new model.
        * Glib.pm: remove overloading, it should no longer be necessary,
        which should give a speed boost as objects are no longer AMAGIC.
        * GObject.xs: remove unused class argument from ->new to make it
        usable as a proper base class.
        * GType.xs: rename INSTANCE_INIT to INIT_INSTANCE and make it a
        function call as opposed to a method call. Also call FINALIZE_INSTANCE
        on object finalization time.
        * t/3.t: simple creation/destruction test.

2003/06/20 11:29 muppetman

	* README, Makefile.PL: bump version number for 0.24 release

2003/06/19 00:44 pcg

	* Depends.pm: moved to ExtUtils-Depends module.
	* Makefile.PL: add ExtUtils-Depends as prerequisite, please
	install the ExtUtils::Depends module seperately from cvs.

2003/06/16 14:21 muppetman

	* GBoxed.xs, gperl.h: converted GBoxed to use vtable-based wrappers;